0.9.



Version 2.3.0
-------------
* API
  + Add hwloc/memattrs.h for exposing latency/bandwidth information between
    initiators (CPU sets for now) and target NUMA nodes.
    - When available, bandwidths and latencies are read from the ACPI HMAT
      table exposed by Linux kernel 5.2+.
    - Attributes may also be customized to expose user-defined performance
      information.
  + The new topology flag HWLOC_TOPOLOGY_FLAG_IMPORT_SUPPORT causes
    support arrays to be loaded from XML exported with hwloc 2.3+.
    - hwloc_topology_get_support() now returns an additional "misc"
      array with feature "imported_support" set when support was imported.
* Backends
  + Add a ROCm SMI backend and a hwloc/rsmi.h helper file for getting
    the locality of AMD GPUs, now exposed as "rsmi" OS devices.
    Thanks to Mike Li.
  + Remove POWER device-tree-based topology on Linux,
    (it was disabled by default since 2.1).
* Tools
  + Command-line options for specifying flags now understand comma-separated
    lists of flag names (substrings).
  + Tools that have a --restrict option may now receive a nodeset or
    some custom flags for restricting the topology.
  + Fix lstopo drawing when autoresizing on Windows 10.
  + Pressing the F5 key in lstopo X11 and Windows graphical/interactive outputs
    now refreshes the display according to the current topology and binding.
  + Add a tikz lstopo graphical backend to generate picture easily included into
    LaTeX documents.
* Misc
  + The default installation path of the Bash completion file has changed to
    ${datadir}/bash-completion/completions/hwloc


Version 2.2.0
-------------
* API
  + Add hwloc_bitmap_singlify_by_core() to remove SMT from a given cpuset,
    thanks to Florian Reynier for the suggestion.
  + Add --enable-32bits-pci-domain to stop ignoring PCI devices with domain
    >16bits (e.g. 10000:02:03.4). Enabling this option breaks the library ABI.
    Thanks to Dylan Simon for the help.
* Backends